# mice

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  RELEASING.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst  mice.rst
docs/source/: usage.rst
experiments/: README.md  generate_all_figures.py  requirements.txt
experiments/logistic_regression/: compute_optimum.py  configs.py  datasets.py  export_chain_size.py  load_data.py  plots_losses.py  run_logreg.py
experiments/logistic_regression/baselines/: __init__.py  optimizers.py  sag.py  saga.py  sarah.py  (+1 more)
experiments/output/: overhead_bench_log.pkl  overhead_bench_timing.txt  overhead_by_dim.csv  quadratic_delta_drop_sensitivity.csv  quadratic_delta_rest_sensitivity.csv  quadratic_epsilon_sensitivity.csv  quadratic_gap_ablations_summary.csv  quadratic_max_index_sensitivity.csv
experiments/quadratic/: problem.py  run_ablations.py  run_benchmarks.py  run_delta_sweep.py  run_epsilon_sweep.py  run_kappa_cost_scaling.py  run_kappa_sweep.py  run_max_index_sweep.py  run_sgd_a_comparison.py  run_single_kappa.py  run_stopping_consistency.py  timed_mice.py
experiments/rosenbrock/: run_rosenbrock_adam.py
mice/: __init__.py  core.py  core_impl.py  deltas.py  logging.py  mice.py  norms.py  plot_config.py  plot_data.py  plot_mice.py  policy.py  sampling.py  state.py
mice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
output/: overhead_by_dim.csv  quadratic_delta_drop_sensitivity.csv  quadratic_delta_rest_sensitivity.csv  quadratic_epsilon_sensitivity.csv  quadratic_gap_ablations_summary.csv  quadratic_max_index_sensitivity.csv
tests/: quad_c.py  quad_c_bias_test.py  quad_c_doc.py  quad_c_mls_test.py
tests/logistic_regression/: log_reg.py
(+3 files in other folders)
